# leela_vs_world

./: README.md  package-lock.json  package.json
contracts/: .env.example  .gitignore  BettingGame.sol  BettingManager.sol  LeelaBetting.sol  LeelaDeposits.sol  README.md  betting.sol  chess.sol  chesshelpers.sol  constants.ts  gas-report.txt  hardhat.config.ts  helper-hardhat-config.ts  iterableMapping.sol  leela.sol  leelaInputs.json  leelaInputs_old.json  leelaInputs_test.json  math.sol  move_map.json  out.js  out_manual.js  out_test.js  package-lock.json  package.json  redblack.sol  reverseMoveMap.json  thing.json  tsconfig.json
contracts/compiled/: leela.json
contracts/contracts/: ChessTest.sol  IChess.sol  LeelaBetting.sol  TestContract.sol  Utils.sol  Validator.sol  (+6 more)
frontend/: .env  .env.example  .eslintrc.json  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ml_model/: .style.yapf  gather_index.json  leela_quantization_testing.py  leela_stockfish_results.txt  leela_v_stockfish.py  policy_map_gather_tensor.pt  requirements.txt  ryan_test.py  sunfish.py
zk_prover/: Cargo.toml  README.md
zk_prover/examples/: leela_example.rs  poseidon_testing.rs
zk_prover/src/: bin.rs  conv_block.rs  input_parsing.rs  input_unpacking.rs  lib.rs  policy_head.rs  residual_block.rs  squeeze_excitation.rs
zk_prover/validator_contract/: hardhat.config.ts  package-lock.json  package.json
zk_prover/validator_contract/contracts/: Validator.sol
zk_prover/validator_contract/proof_dir/: limbs_instance  official_calldata  proof  verifier_contract_bytecode
zk_prover/validator_contract/test/: ValidatorTests.ts
zk_prover/validator_example/: package-lock.json  package.json
zk_prover/validator_example/contracts/: VerifierExample.sol
zk_prover/validator_example/test/: Lock.ts
(+147 files in other folders)
