[package]
name = "leela_zk"
version = "0.1.0"
edition = "2021"

[lib]
name = "leela_circuit"
path = "src/lib.rs"

[[bin]]
name = "run_leela"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2022_10_22", features = ["dev-graph"]}
halo2_machinelearning = {path="/home/aweso/halo2_machinelearning"}
ndarray = "0.15.6"
json = "0.12.4"
lazy_static = "1.4.0"
plotters = {version = "0.3.4"}
once_cell = "1.17.0"
rand = "0.8.5"

